# nes-cpp

./: CMakeLists.txt  Makefile  README.md  cpu.h  main.cpp  program.out
snake/: bus.cpp  bus.h  cpu.cpp  cpu.h  global.h  main.cpp  opcode.cpp  opcode.h  rom.cpp  rom.h  trace.cpp  trace.h
src/: bus.cpp  bus.h  cpu.cpp  cpu.h  main.cpp  opcode.cpp  opcode.h
tests/: 5_ops_together.cpp  inx_overflow.cpp  lda_from_memory.cpp  lda_immediate_load_data.cpp  lda_immediate_zero_flag.cpp  tax_move_a_to_x.cpp  test.cpp  test.h
trace/: bus.cpp  bus.h  cpu.cpp  cpu.h  global.h  main.cpp  opcode.cpp  opcode.h  rom.cpp  rom.h  trace.cpp  trace.h
